--- a/BrowserTabManager/BrowserTabManager.csproj
+++ b/BrowserTabManager/BrowserTabManager.csproj
@@ -9,7 +9,53 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Back.png" />
+    <None Remove="Clone.png" />
+    <None Remove="Close.png" />
+    <None Remove="Minimize.png" />
+    <None Remove="Minus.png" />
+    <None Remove="noun-refresh-1977395.png" />
+    <None Remove="noun-replay-449323.png" />
+    <None Remove="Plus.png" />
+    <None Remove="Refresh.png" />
+    <None Remove="Refresh_icon.svg.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3351.48" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Back.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Clone.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Close.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Minimize.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Minus.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="noun-refresh-1977395.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="noun-replay-449323.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Plus.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Refresh.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Refresh_icon.svg.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
 </Project>
